# jspsych-plus

./: LICENSE  pyproject.toml
jspsych_plus/: __init__.py  jspsych.py
jspsych_plus/api/: channel.py  fs.py  static.py
jspsych_plus/applications/: jspsych.py
jspsych_plus/endpoint/: static.py
jspsych_plus/management/: help.py  management.py  project.py
tests/: __init__.py  api.py  endpoint.py  management.py  utils.py
tests/pages/: index.html
